sources/scripts/css/application.css
/* ... */
.list-group .ember-view:last-of-type .list-group-item {
    margin-bottom: 0;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
}

/*
* Notifyjs
*/

.notifyjs-bootstrap-base {
    min-width: 400px;
    max-width: 800px;
    white-space: normal !important;
    padding-left: 14px !important;
    background-image: none !important;
    text-align: center;
    font-size: 25px;
    border-width: 10px !important;
}

.notifyjs-container {
    margin-left: -200px !important;
}

.notifyjs-corner {
    margin-bottom: 100px !important;
    left: 50% !important;
}

/*
* Errors
*/

.has-error .error {
    color: #C84A48;
}

/*
* Boostrap file input
*/

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 999px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    background: red;
    cursor: inherit;
    display: block;
}

/*
* Modal dialog fix
*/

.modal-dialog {
    left: 0;
}

/*************************************************************
**************************************************************
* Components restiling
*************************************************************
*************************************************************/

/*
* select2
*/

.select2-container-multi .select2-choices .select2-search-field input.select2-active {
    background-size: 20px 20px !important;
    background-image: url('../images/preloader_100x100.gif') !important;
}

/*
*Selectize
*/

.selectize-control {
    text-align: left;
}

/*
*Selectize
*/

.selectize-dropdown-content .active {
    color: #fff;
    background-color: #2fa4e7;
}

.selectize-dropdown-content div[data-selectable] {
    border-bottom: 1px solid #E0DBDB;
}

.selectize-dropdown-content div[data-selectable]:last-child {
    border-bottom: 0px;
}

.selectize-dropdown-content div[data-selectable] .help-block {
    font-size: 12px;
    line-height: 12px;
}

.selectize-dropdown-content div[data-selectable].active .help-block {
    color: #fff;
    background-color: #2fa4e7;
}

/*************************************************************
**************************************************************
* Labels
*************************************************************
*************************************************************/

.label-header {
    margin-top: -3px;
    background-color: #317EAC;
}

/*************************************************************
**************************************************************
* layouts
*************************************************************
*************************************************************/

.container-full {
    margin: 0 auto;
    width: 90%;
}

.padding-0 {
    padding: 0px;
}

.padding-5 {
    padding: 5px;
}

.padding-10 {
    padding: 10px;
}

.padding-15 {
    padding: 15px;
}

.padding-30 {
    padding: 30px;
}

.bottom-5 {
    margin-bottom: 5px;
}

.bottom-10 {
    margin-bottom: 10px;
}

.bottom-15 {
    margin-bottom: 15px;
}

.bottom-30 {
    margin-bottom: 30px;
}

.bottom-150 {
    margin-bottom: 150px;
}

.top-0 {
    margin-top: 0px;
}

.top-5 {
    margin-top: 5px;
}

.top-10 {
    margin-top: 10px;
}

.top-15 {
    margin-top: 15px;
}

.top-20 {
    margin-top: 20px;
}

.top-30 {
    margin-top: 30px;
}

.top-50 {
    margin-top: 50px;
}

.top-150 {
    margin-top: 150px;
}

/*************************************************************
**************************************************************
* breadcrumbs
*************************************************************
*************************************************************/

.vlt-breads {
    padding: 10px 10px 10px 0px;
    border-bottom: 1px solid #E0DBDB;
    background-color: #F5F5F5;
    font-size: 25px;
}

.vlt-breads .vlt-bread {
    float: left;
}

.vlt-breads .vlt-separator {
    margin-top: 2px;
    padding: 2px 5px 2px 5px;
    font-size: 25px;
    font-weight: bold;
    color: #e0dbdb;
    float: left;
}

.vlt-breads .vlt-bread .vlt-bread-inner {
    display: block;
    border-radius: 4px;
    border: 1px solid transparent;
    transition: border-color 500ms, background-color 500ms;
    padding: 4px;
}

.vlt-breads .vlt-bread .vlt-bread-inner {
    border-radius: 4px;
    border: 1px solid transparent;
    transition: border-color 500ms, background-color 500ms;
    padding: 4px;
}

.vlt-breads .vlt-bread a.vlt-bread-inner:hover {
    border: 1px solid #317EB2;
    transition: border-color 500ms, background-color 500ms;
    background-color: #FFFFFF;
}

.vlt-breads .vlt-bread .vlt-bread-inner .vlt-icon {
    margin: -3px 2px 0px 0px;
    width: 20px;
    height: 20px;
}

@media (max-width: 767px) {
    .vlt-breads .vlt-bread {
        float: none;
    }

    .vlt-breads .vlt-separator {
        float: none;
        margin-top: 5px;
        overflow: hidden;
        border-top: 1px solid #E0DBDB;
        height: 1px;
    }

}

/*************************************************************
**************************************************************
* Button wrapper for tooltips
*************************************************************
*************************************************************/

.vlt-button-wrapper {
    display: inline-block;
}

/*************************************************************
**************************************************************
* page and page section
*************************************************************
*************************************************************/

.vlt-page {

}

/* Plain page */

.vlt-page.vlt-page-plain {
    border-radius: 6px;
    border: 1px solid #dbedfc;
    border-top-color: transparent;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    background-color: #f0f7fd;
    padding: 0px 30px 100px 30px;
    margin-bottom: 200px;
}
/* ... */

